--- a/assets/css/calendar_event.css
+++ b/assets/css/calendar_event.css
@@ -69,7 +69,7 @@
     background-color: #9600db;
 }
 .calendar .days .day_num .event.homework {
-    background-color: #3edb00;
+    background-color: #ff6200;
 }
 .calendar .days .day_num:nth-child(7n+1) {
     border-left: 1px solid #e6e9ea;
